[project]
name = "terminal-wrapped"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raoul Grouls", email = "Raoul.Grouls@han.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
]

[project.scripts]
terminal-wrapped = "terminal_wrapped:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/terminal_wrapped"]
