[project]
name = "terminal_wrapped"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raoul Grouls", email = "Raoul.Grouls@han.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
]

[project.scripts]
terminal_wrapped = "terminal_wrapped:main.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/terminal_wrapped"]

[dependency-groups]
dev = [
    "black>=24.10.0",
]

[project.urls]
GitHub = "https://github.com/raoulg/terminal_wrapped"

